# dtheinfra

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  build.sbt  linear_sync_test.txt  pyproject.toml
.github/workflows/: ci.yml
config/base/: iceberg.yaml  kafka.yaml  logging.yaml
config/environments/: local.yaml
docs/: LINEAR_SYNC_TEST.md  linear-sync-test.md
docs/architecture/adr/: 0001-use-iceberg-as-table-format.md
docs/development/: getting-started.md
infra/terraform/environments/dev/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/governance/iam-roles/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/vpc/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/storage/s3-lakehouse/: main.tf  outputs.tf  variables.tf
libs/python/dp-core/: pyproject.toml
libs/python/dp-core/src/dp_core/: __init__.py  config.py  exceptions.py  logging.py
libs/python/dp-core/tests/: test_config.py
libs/rust/dp-common/: Cargo.toml
libs/rust/dp-common/src/: config.rs  error.rs  lib.rs  logging.rs
local/: .env.example  Makefile  docker-compose.core.yml  docker-compose.yml
local/init-scripts/kafka/: create-topics.sh
platform/catalog/: README.md
platform/datagen/: README.md  main.py  pyproject.toml
project/: plugins.sbt
schemas/avro/events/: user_event.avsc
