[workspace]
resolver = "2"
members = [
    "libs/rust/dp-common",
    "libs/rust/dp-kafka",
    "apps/ingestion/stream-ingestors/kafka-producer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/your-org/data-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apache-avro = "0.16"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
