[project]
name = "data-platform"
version = "0.1.0"
description = "End-to-end data platform with Lambda architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Data Platform Team" }]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "httpx>=0.27",
]

[tool.uv.workspace]
members = [
    "libs/python/dp-core",
    "libs/python/dp-connectors",
    "libs/python/dp-quality",
    "libs/python/dp-schemas",
    "apps/ingestion/batch-ingestors/*",
    "apps/services/*",
    "apps/orchestration",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["dp_core", "dp_connectors", "dp_quality", "dp_schemas"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
]

[tool.pytest.ini_options]
testpaths = ["tests", "libs/python/*/tests", "apps/*/tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["libs/python", "apps"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
